[package]
name = "bevy_brp_websocket_relay"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebSocket relay transport for Bevy Remote Protocol (BRP) - enables BRP on WASM targets"
repository = "https://github.com/johanhelsing/bevy_brp_websocket_relay"
readme = "README.md"
keywords = ["bevy", "brp", "wasm", "websocket", "remote"]
categories = ["game-development", "wasm", "web-programming"]

[dependencies]
bevy_app = "0.18"
bevy_ecs = "0.18"
bevy_log = "0.18"
bevy_remote = { version = "0.18", default-features = false }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-channel = "2"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Window",
    "Location",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
